fix: remove push of alpine version

--- a/build.yml
+++ b/build.yml
@@ -84,17 +84,14 @@ targets:
       - print: "Executing build target"
         color: cyan
       - mkdir: "build"
-      - $: "sudo docker build -f Dockerfile.alpine -q --iidfile build/last-alpine-ci -t ={DOCKERHUB_USER}/={project}-ci:alpine --target ={project}-ci-alpine ."
-      - $: "sudo docker build -f Dockerfile.alpine -q --iidfile build/last-alpine-slim -t ={DOCKERHUB_USER}/={project}-slim:alpine --target ={project}-slim-alpine ."
-      - $: "sudo docker build -f Dockerfile.alpine -q --iidfile build/last-alpine-full -t ={DOCKERHUB_USER}/={project}:alpine --target ={project}-full-alpine ."
       - $: "sudo docker build -f Dockerfile.debian -q --iidfile build/last-debian-ci -t ={DOCKERHUB_USER}/={project}-ci:debian --target ={project}-ci-debian ."
       - $: "sudo docker build -f Dockerfile.debian -q --iidfile build/last-debian-slim -t ={DOCKERHUB_USER}/={project}-slim:debian --target ={project}-slim-debian ."
       - $: "sudo docker build -f Dockerfile.debian -q --iidfile build/last-debian-full -t ={DOCKERHUB_USER}/={project}:debian --target ={project}-full-debian ."
       - if: "latest"
         then:
-          - $: "sudo docker tag ={DOCKERHUB_USER}/={project}-ci:alpine ={DOCKERHUB_USER}/={project}-ci:latest"
-          - $: "sudo docker tag ={DOCKERHUB_USER}/={project}-slim:alpine ={DOCKERHUB_USER}/={project}-slim:latest"
-          - $: "sudo docker tag ={DOCKERHUB_USER}/={project}:alpine ={DOCKERHUB_USER}/={project}:latest"
+          - $: "sudo docker tag ={DOCKERHUB_USER}/={project}-ci:debian ={DOCKERHUB_USER}/={project}-ci:latest"
+          - $: "sudo docker tag ={DOCKERHUB_USER}/={project}-slim:debian ={DOCKERHUB_USER}/={project}-slim:latest"
+          - $: "sudo docker tag ={DOCKERHUB_USER}/={project}:debian ={DOCKERHUB_USER}/={project}:latest"
 
   # run "neon -props '{latest: true}' release" to include latest tag
   release:
@@ -104,29 +101,17 @@ targets:
     steps:
       - if: 'is_release == "yes"'
         then:
-          - $: "sudo docker tag ={DOCKERHUB_USER}/={project}:alpine ={DOCKERHUB_USER}/={project}:v={version_major}"
-          - $: "sudo docker tag ={DOCKERHUB_USER}/={project}:alpine ={DOCKERHUB_USER}/={project}:v={version_major}.={version_minor}"
-          - $: "sudo docker tag ={DOCKERHUB_USER}/={project}:alpine ={DOCKERHUB_USER}/={project}:v={version_major}.={version_minor}.={version_patch}"
-          - $: "sudo docker images --no-trunc | grep $(cat build/last-alpine-full)"
-          - $: "sudo docker tag ={DOCKERHUB_USER}/={project}:debian ={DOCKERHUB_USER}/={project}:v={version_major}-debian"
-          - $: "sudo docker tag ={DOCKERHUB_USER}/={project}:debian ={DOCKERHUB_USER}/={project}:v={version_major}.={version_minor}-debian"
-          - $: "sudo docker tag ={DOCKERHUB_USER}/={project}:debian ={DOCKERHUB_USER}/={project}:v={version_major}.={version_minor}.={version_patch}-debian"
+          - $: "sudo docker tag ={DOCKERHUB_USER}/={project}:debian ={DOCKERHUB_USER}/={project}:v={version_major}"
+          - $: "sudo docker tag ={DOCKERHUB_USER}/={project}:debian ={DOCKERHUB_USER}/={project}:v={version_major}.={version_minor}"
+          - $: "sudo docker tag ={DOCKERHUB_USER}/={project}:debian ={DOCKERHUB_USER}/={project}:v={version_major}.={version_minor}.={version_patch}"
           - $: "sudo docker images --no-trunc | grep $(cat build/last-debian-full)"
-          - $: "sudo docker tag ={DOCKERHUB_USER}/={project}-slim:alpine ={DOCKERHUB_USER}/={project}-slim:v={version_major}"
-          - $: "sudo docker tag ={DOCKERHUB_USER}/={project}-slim:alpine ={DOCKERHUB_USER}/={project}-slim:v={version_major}.={version_minor}"
-          - $: "sudo docker tag ={DOCKERHUB_USER}/={project}-slim:alpine ={DOCKERHUB_USER}/={project}-slim:v={version_major}.={version_minor}.={version_patch}"
-          - $: "sudo docker images --no-trunc | grep $(cat build/last-alpine-slim)"
-          - $: "sudo docker tag ={DOCKERHUB_USER}/={project}-slim:debian ={DOCKERHUB_USER}/={project}-slim:v={version_major}-debian"
-          - $: "sudo docker tag ={DOCKERHUB_USER}/={project}-slim:debian ={DOCKERHUB_USER}/={project}-slim:v={version_major}.={version_minor}-debian"
-          - $: "sudo docker tag ={DOCKERHUB_USER}/={project}-slim:debian ={DOCKERHUB_USER}/={project}-slim:v={version_major}.={version_minor}.={version_patch}-debian"
+          - $: "sudo docker tag ={DOCKERHUB_USER}/={project}-slim:debian ={DOCKERHUB_USER}/={project}-slim:v={version_major}"
+          - $: "sudo docker tag ={DOCKERHUB_USER}/={project}-slim:debian ={DOCKERHUB_USER}/={project}-slim:v={version_major}.={version_minor}"
+          - $: "sudo docker tag ={DOCKERHUB_USER}/={project}-slim:debian ={DOCKERHUB_USER}/={project}-slim:v={version_major}.={version_minor}.={version_patch}"
           - $: "sudo docker images --no-trunc | grep $(cat build/last-debian-slim)"
-          - $: "sudo docker tag ={DOCKERHUB_USER}/={project}-ci:alpine ={DOCKERHUB_USER}/={project}-ci:v={version_major}"
-          - $: "sudo docker tag ={DOCKERHUB_USER}/={project}-ci:alpine ={DOCKERHUB_USER}/={project}-ci:v={version_major}.={version_minor}"
-          - $: "sudo docker tag ={DOCKERHUB_USER}/={project}-ci:alpine ={DOCKERHUB_USER}/={project}-ci:v={version_major}.={version_minor}.={version_patch}"
-          - $: "sudo docker images --no-trunc | grep $(cat build/last-alpine-ci)"
-          - $: "sudo docker tag ={DOCKERHUB_USER}/={project}-ci:debian ={DOCKERHUB_USER}/={project}-ci:v={version_major}-debian"
-          - $: "sudo docker tag ={DOCKERHUB_USER}/={project}-ci:debian ={DOCKERHUB_USER}/={project}-ci:v={version_major}.={version_minor}-debian"
-          - $: "sudo docker tag ={DOCKERHUB_USER}/={project}-ci:debian ={DOCKERHUB_USER}/={project}-ci:v={version_major}.={version_minor}.={version_patch}-debian"
+          - $: "sudo docker tag ={DOCKERHUB_USER}/={project}-ci:debian ={DOCKERHUB_USER}/={project}-ci:v={version_major}"
+          - $: "sudo docker tag ={DOCKERHUB_USER}/={project}-ci:debian ={DOCKERHUB_USER}/={project}-ci:v={version_major}.={version_minor}"
+          - $: "sudo docker tag ={DOCKERHUB_USER}/={project}-ci:debian ={DOCKERHUB_USER}/={project}-ci:v={version_major}.={version_minor}.={version_patch}"
           - $: "sudo docker images --no-trunc | grep $(cat build/last-debian-ci)"
         else:
           - print: "Skipping release target (not a release)"
@@ -148,21 +133,12 @@ targets:
           - $: "sudo docker push ={DOCKERHUB_USER}/={project}:v={version_major}"
           - $: "sudo docker push ={DOCKERHUB_USER}/={project}:v={version_major}.={version_minor}"
           - $: "sudo docker push ={DOCKERHUB_USER}/={project}:v={version_major}.={version_minor}.={version_patch}"
-          - $: "sudo docker push ={DOCKERHUB_USER}/={project}:v={version_major}-debian"
-          - $: "sudo docker push ={DOCKERHUB_USER}/={project}:v={version_major}.={version_minor}-debian"
-          - $: "sudo docker push ={DOCKERHUB_USER}/={project}:v={version_major}.={version_minor}.={version_patch}-debian"
           - $: "sudo docker push ={DOCKERHUB_USER}/={project}-slim:v={version_major}"
           - $: "sudo docker push ={DOCKERHUB_USER}/={project}-slim:v={version_major}.={version_minor}"
           - $: "sudo docker push ={DOCKERHUB_USER}/={project}-slim:v={version_major}.={version_minor}.={version_patch}"
-          - $: "sudo docker push ={DOCKERHUB_USER}/={project}-slim:v={version_major}-debian"
-          - $: "sudo docker push ={DOCKERHUB_USER}/={project}-slim:v={version_major}.={version_minor}-debian"
-          - $: "sudo docker push ={DOCKERHUB_USER}/={project}-slim:v={version_major}.={version_minor}.={version_patch}-debian"
           - $: "sudo docker push ={DOCKERHUB_USER}/={project}-ci:v={version_major}"
           - $: "sudo docker push ={DOCKERHUB_USER}/={project}-ci:v={version_major}.={version_minor}"
           - $: "sudo docker push ={DOCKERHUB_USER}/={project}-ci:v={version_major}.={version_minor}.={version_patch}"
-          - $: "sudo docker push ={DOCKERHUB_USER}/={project}-ci:v={version_major}-debian"
-          - $: "sudo docker push ={DOCKERHUB_USER}/={project}-ci:v={version_major}.={version_minor}-debian"
-          - $: "sudo docker push ={DOCKERHUB_USER}/={project}-ci:v={version_major}.={version_minor}.={version_patch}-debian"
           - if: "latest"
             then:
               - $: "sudo docker push ={DOCKERHUB_USER}/={project}-ci:latest"
